fix mobile icon alignment

--- a/app/_scss/globals/_mixins.scss
+++ b/app/_scss/globals/_mixins.scss
@@ -110,6 +110,9 @@
     &:hover {
       text-decoration: none;
     }
+    @media  screen and (max-width: $width-md) {
+      margin-right: 0;
+    }
   }
   .icon-#{$name} {
     color: white;
